			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04e: *********************************

IMP: (2/16/06, DN) Undo system reimplemented based on snapshot.

IMP: (2/15/06, RK) Make NCC recognize scalable MoCMOS transistors (Bugzilla# 602)

IMP: (2/15/06, RK) Add an NCC sub-menu that allows designer to add any NCC annotation. (Bugzilla: 646)

IMP: (2/15/06, RK) Re-implemented NCC command "Copy Schematic Names to Layout". It now copies Network names for all schematic/layout cell pairs.

IMP: (2/15/06, RK) Conversion of NCC to client server model

IMP: (2/14/06, SMR) Moved all requests for the "current cell" to the UserInterface object.

BUG: (2/13/06, DN) Regression fails, because projects settings from disk files are not reconciled.
FIX: In LayoutLib.openLibraryForRead call readLibrary with "quick=false".

BUG: (2/13/06, SMR) Curved arcs are not selectable after being read.
FIX: In ArcInst.addVar(), check for curvature variables and update geometry.

BUG: (2/13/06, SMR) Compaction loops infinitely (Bug #813).
FIX: In Compaction.java, compare motion amounts against epsilon, not zero.

BUG: (2/13/06, SMR) Arcs with no angle increment are always drawn horizontally.
FIX: In InteractiveRouter.getClosestAngledPoint(), handle 0 degrees specially.
     In RouteElementArc.addHighlightArea(), use more general code.

BUG: (2/13/06, SMR) Attributes dialog loses the selected variable name when new valeus are typed.
FIX: In Highlighter.java, fire highlight changes only for the main highligher (not the
     mouse-over or ruler highlighters).  Also in Attributes.java, remember the selected variable.

BUG: (2/10/06, GVG) Fixing error in DRC schematics due to the adding of Variables during examing job (Bug #814).
FIX: Collect variables and then later kick a DRCUpdate job.

BUG: (2/10/06, DN) MOSSIM regression results are not determenistc.