@@ -6,6 +6,11 @@ NOTE: Please place changes under the version that will be released next.
 
 IMP: (2/16/06, DN) Undo system reimplemented based on snapshot.
 
+BUG: (2/15/06, SMR) Selection of Exports by the "Select Object" and "Find Text"
+     commands doesn't work (Bug #817)
+FIX: In SelectObject.listClicked(), use Export name when highlighting.
+     In EditWindow.findNextText(), use Export key when export is selected.
+
 IMP: (2/15/06, RK) Make NCC recognize scalable MoCMOS transistors (Bugzilla# 602)
 
 IMP: (2/15/06, RK) Add an NCC sub-menu that allows designer to add any NCC annotation. (Bugzilla: 646)
